--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Personal Webpage</title>
+</head>
+<body>
+<header>
+  <h1>Welcome To My Personal Webpage</h1>
+  <p>This is a simple example of an HTML and CSS personal webpage.</p>
+</header>
+</body>
+</html>
