--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Personal Webpage</title>
+  <title>Cheifs Kingdom</title>
 </head>
 <body>
 <header>
-  <h1>Welcome To My Personal Webpage</h1>
+  <h1>Welcome To Cheifs Kingdom</h1>
   <p>This is a simple example of an HTML and CSS personal webpage.</p>
 </header>
 </body>
