--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cheifs Kingdom</title>
+  <title>My Personal Webpage</title>
 </head>
 <body>
 <header>
-  <h1>Welcome To Cheifs Kingdom</h1>
+  <h1>Welcome To My Personal Webpage</h1>
   <p>This is a simple example of an HTML and CSS personal webpage.</p>
+<pre>
+Name: Trey Albertson
+Age: 30
+Location: Kansas City Mo
+</pre>
 </header>
+<section>
+<p>Check Out my Favorite website:
+<a href="https://www.chiefs.com/thekingdom/"target="_blank">The Kingdom</a>
+</p>
+<a href="mailto:t.albertson0695@gmail.com"target="_blank">Contact Me</a>
+<a href="https://github.com/settings/profile"target="_blank">
+<img src="https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/unnamed.jpg?raw=true" alt="Profile Photo"></a>
+</section>
+<hr>
+<h2>My Hobbies</h2>
+<table>
+<tr>
+<th>Hobby</th>
+<th>Hours/Week</th>
+</tr>
+<tr>
+<td>Homework</td>
+<td>4 hours</td>
+</tr>
+<tr>
+<td>Relaxing</td>
+<td>10 Hours</td>
+</tr>
+</table>
+<h2>My Favorite Movies</h2>
+<table>
+<tr>
+<th>Movie</th>
+<th>Year It Came Out</th>
+</tr>
+<tr>
+<td>American Sniper</td>
+<td>2014</td>
+</tr>
+<tr>
+<td>Hacksaw Ridge</td>
+<td>2016</td>
+</tr>
+</table>
+<hr>My Favorite Food</hr>
+<ul>
+<li>Porterhouse Steak</li>
+<li>Pizza</li>
+<li>Loaded Baked Potato</li>
+</ul>
+<hr>My Favorite Drinks</hr>
+<ul>
+<li>Monster Energy Drink</li>
+<li>Dr. Pepper</li>
+<li>Liquid I.V.</li>
+</ul>
+<hr>
+<section>
+<h2>Travis Kelce WARMING UP!!!</h2>
+<video width="360"Height="480" controls>
+<source src=https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/Download.mp4?raw=true">
+Your Browser Does Not Support The Vide Tag.
+</video>
+</section>
+<h2>THE GOAT</h2>
+<iframe src="https://www.youtube.com/embed/cXQ7vQGhf5M/?refresh=true" width="853" height="480" style="border:none;"></iframe>
+</section>
 </body>
 </html>
+
