--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@ Your Browser Does Not Support The Vide Tag.
 </video>
 </section>
 <h2>THE GOAT</h2>
-<iframe src="https://www.youtube.com/embed/cXQ7vQGhf5M/?refresh=true" width="853" height="480" style="border:none;"></iframe>
+<iframe src="https://www.youtube.com/embed/36SPZdmAgTo" width="853" height="480" style="border:none;"></iframe>
 </section>
 </body>
 </html>
-
