--- a/index.html
+++ b/index.html
@@ -1,71 +1,168 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+body {
+	background-color: red;
+	font-family: Arial;
+	color: yellow;
+	text-align: center;
+	}
+header {
+	background-image: url('https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/IMG_0482.JPG?raw=true');
+    	background-size: cover;        /* Image fills header */
+    	background-position: center;   /* Keeps subject centered */
+    	background-repeat: no-repeat;  /* Prevents tiling */
+    
+    	color: black;
+	font-weight: bold;
+    	text-align: center;
+    	padding: 60px 20px;
+	}
+h1 {
+	color: gold;
+	font-size: 36px;
+	}
+p {
+	font-size: 18px;
+	}
+img {
+	width: 360px;
+	height: 180px;
+	border-radius: 50%;
+	border: 3px solid gold;
+	margin-top: 10px;
+	}
+.table-style1 {
+	width: 60%;
+	margin: 20px auto;
+	border: 2px solid navy;
+	}
+.table-style1 th,.table-style1 td {
+	border: 1px solid navy;
+	padding: 10px;
+	text-align: center;
+	}
+.table-style1 th {
+	background-color: solid red;
+	}
+.table-style2 {
+	width: 60%;
+	margin: 20px auto;
+	border-collapse: collapse;
+	border: 2px solid gold;
+	}
+.table-style2 th, .table-style2 td {
+	border: 1px solid gold;
+	padding: 10px;
+	text-align: center;
+	}
+.table-style2 th {
+	background-color: black;
+	}
+.about {
+	width: 60%;
+	margin: 20px auto;
+	text-align: left;
+	}
+div.mycontainer {
+	width: 66%;
+	overflow: auto;
+	}
+	div.mycontainer div {
+	width: 50%;
+	float:left;
+	}
+.video {
+	width: 40%;
+	margin: 10px auto;
+	text-align: center;
+	border: 3px solid green;
+	}
+.list-style1 {
+	list-style-type: square;
+	color: solid gold;
+	text-align: left;
+	margin: 20px;
+	}
+.list-style2 {
+	list-style-type: circle;
+	color: solid gold;
+	text-align: left;
+	margin: 20px;
+	}
+</style>
   <title>My Personal Webpage</title>
 </head>
 <body>
 <header>
-  <h1>Welcome To My Personal Webpage</h1>
-  <p>This is a simple example of an HTML and CSS personal webpage.</p>
+  <h1>Welcome To Chiefs Kingdom</h1>
+  <p>Want some updated stats?</p>
 <pre>
 Name: Trey Albertson
 Age: 30
 Location: Kansas City Mo
 </pre>
 </header>
-<section>
+<section class="about">
 <p>Check Out my Favorite website:
 <a href="https://www.chiefs.com/thekingdom/"target="_blank">The Kingdom</a>
 </p>
 <a href="mailto:t.albertson0695@gmail.com"target="_blank">Contact Me</a>
 <a href="https://github.com/settings/profile"target="_blank">
-<img src="https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/unnamed.jpg?raw=true" alt="Profile Photo"></a>
+<img src="https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/IMG_0455.JPG?raw=true" alt="Profile Photo" title= "Github Profile"></a>
 </section>
 <hr>
-<h2>My Hobbies</h2>
-<table>
+<h2>QB Stats</h2>
+<table class="table-style1">
 <tr>
-<th>Hobby</th>
-<th>Hours/Week</th>
+<th>Current Quarterback</th>
+<th>Season	YDS	CMP%	TD	INT	QBR>
 </tr>
 <tr>
-<td>Homework</td>
-<td>4 hours</td>
+<td>Patrick Mahomes</td>
+<td>2025,	2625,	64.5,	18,	6,	103.0S>
 </tr>
 <tr>
-<td>Relaxing</td>
-<td>10 Hours</td>
-</tr>
-</table>
-<h2>My Favorite Movies</h2>
-<table>
-<tr>
-<th>Movie</th>
-<th>Year It Came Out</th>
-</tr>
-<tr>
-<td>American Sniper</td>
-<td>2014</td>
-</tr>
-<tr>
-<td>Hacksaw Ridge</td>
-<td>2016</td>
+<td>Patrick Mahomes</td>
+<td>2024,	3928,	67.5,	26,	11,	99.8</td>
 </tr>
 </table>
-<hr>My Favorite Food</hr>
-<ul>
+<h2>Wide Recievers Stats</h2>
+<table class="table-style2">
+<tr>
+<th>Wide Reciever</th>
+<th>GP,	CAR,	YDS,	AVG,	LNG,	BIG,	TD,	YDS/G,	FUM,	LST,	FD</th>
+</tr>
+<tr>
+<td>Kareem Hunt</td>
+<td>10,	86,	353,	4.1,	33,	1,	6,	35.3,	1,	0,	29</td>
+</tr>
+<tr>
+<td>Isiah Pacheco</td>
+<td>8,	78,	329,	4.2,	16,	0,	1,	41.1,	0,	0,	21</td>
+</tr>
+</table>
+<div class= "mycontainer">
+<div>
+<h2>My Favorite Food</h2>
+<ul class="list-style1">
 <li>Porterhouse Steak</li>
 <li>Pizza</li>
 <li>Loaded Baked Potato</li>
 </ul>
-<hr>My Favorite Drinks</hr>
-<ul>
+</div>
+<div>
+<h2>My Favorite Drinks</h2>
+<ul class="list-style2">
 <li>Monster Energy Drink</li>
 <li>Dr. Pepper</li>
 <li>Liquid I.V.</li>
 </ul>
+</div>
+</div>
 <hr>
-<section>
+<section class="video">
 <h2>Travis Kelce WARMING UP!!!</h2>
 <video width="360"Height="480" controls>
 <source src=https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/Download.mp4?raw=true">
