--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ img {
 .table-style1 {
 	width: 60%;
 	margin: 20px auto;
-	border: 2px solid navy;
+	border: 2px solid gold;
 	}
 .table-style1 th,.table-style1 td {
-	border: 1px solid navy;
+	border: 1px solid gold;
 	padding: 10px;
 	text-align: center;
 	}
