--- a/test.html
+++ b/test.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      body {
+        background-image: linear-gradient(to bottom, DarkOrchid 0%, DarkOrchid 25%, Firebrick 50%, white 75%, white 100%);
+        min-height: 100vh;
+      }
+    </style>
+  </head>
+  <body>
+    <p>This is a new page.</p>
+  </body>
+</html>
