--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ Name: Trey Albertson
 Age: 30
 Location: Kansas City Mo
 </pre>
+<a href="test.html" style="color:black"; target="_blank";>
+<button>New Page Link</button></a>
 </header>
 <section class="about">
 <p>Check Out my Favorite website:
