--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@ div.mycontainer {
 	text-align: left;
 	margin: 20px;
 	}
+.button-transition {
+	background-color: navy;
+	color: white;
+	padding: 10px 20px;
+	transition: background-color 0.03s ease;
+	border: none;
+	cursor: pointer;
+	}
 </style>
   <title>My Personal Webpage</title>
 </head>
