--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ div.mycontainer {
 	cursor: pointer;
 	}
 .button-transition:hover {
-	background-color: Golg;
+	background-color: gold;
 	}
 </style>
   <title>My Personal Webpage</title>
