--- a/index.html
+++ b/index.html
@@ -1,189 +1,233 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-body {
-	background-color: red;
-	font-family: Arial;
-	color: yellow;
-	text-align: center;
-	}
-header {
-	background-image: url('https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/IMG_0482.JPG?raw=true');
-    	background-size: cover;        /* Image fills header */
-    	background-position: center;   /* Keeps subject centered */
-    	background-repeat: no-repeat;  /* Prevents tiling */
-    
-    	color: black;
-	font-weight: bold;
-    	text-align: center;
-    	padding: 60px 20px;
-	}
-h1 {
-	color: gold;
-	font-size: 36px;
-	}
-p {
-	font-size: 18px;
-	}
-img {
-	width: 360px;
-	height: 180px;
-	border-radius: 50%;
-	border: 3px solid gold;
-	margin-top: 10px;
-	}
-.table-style1 {
-	width: 60%;
-	margin: 20px auto;
-	border: 2px solid gold;
-	}
-.table-style1 th,.table-style1 td {
-	border: 1px solid gold;
-	padding: 10px;
-	text-align: center;
-	}
-.table-style1 th {
-	background-color: solid red;
-	}
-.table-style2 {
-	width: 60%;
-	margin: 20px auto;
-	border-collapse: collapse;
-	border: 2px solid gold;
-	}
-.table-style2 th, .table-style2 td {
-	border: 1px solid gold;
-	padding: 10px;
-	text-align: center;
-	}
-.table-style2 th {
-	background-color: black;
-	}
-.about {
-	width: 60%;
-	margin: 20px auto;
-	text-align: left;
-	}
-div.mycontainer {
-	width: 66%;
-	overflow: auto;
-	}
-	div.mycontainer div {
-	width: 50%;
-	float:left;
-	}
-.video {
-	width: 40%;
-	margin: 10px auto;
-	text-align: center;
-	border: 3px solid green;
-	}
-.list-style1 {
-	list-style-type: square;
-	color: solid gold;
-	text-align: left;
-	margin: 20px;
-	}
-.list-style2 {
-	list-style-type: circle;
-	color: solid gold;
-	text-align: left;
-	margin: 20px;
-	}
-.button-transition {
-	background-color: navy;
-	color: white;
-	padding: 10px 20px;
-	transition: background-color 0.03s ease;
-	border: none;
-	cursor: pointer;
-	}
-.button-transition:hover {
-	background-color: gold;
-	}
-</style>
   <title>My Personal Webpage</title>
+  <style>
+    body {
+      background-image: url('https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/football-field.png?raw=true'); /* Football field background */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      font-family: Arial, sans-serif;
+      color: yellow;
+      text-align: center;
+    }
+
+    header {
+      position: relative;
+      background-image: url('https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/IMG_0482.JPG?raw=true'); /* Header photo */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      color: black;
+      font-weight: bold;
+      text-align: center;
+      padding: 60px 20px;
+    }
+
+    /* Overlay on header for readability */
+    header::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.4);
+    }
+    header * {
+      position: relative;
+    }
+
+    h1, h2 {
+      color: gold;
+      text-shadow: 2px 2px 6px black; /* shadowed text */
+    }
+
+    p {
+      font-size: 18px;
+    }
+
+    img {
+      width: 360px;
+      height: 180px;
+      border-radius: 50%;
+      border: 3px solid gold;
+      margin-top: 10px;
+    }
+
+    .table-style1, .table-style2 {
+      width: 60%;
+      margin: 20px auto;
+      border-collapse: collapse;
+      border: 2px solid gold;
+      background: rgba(0,0,0,0.5);
+    }
+
+    .table-style1 th, .table-style1 td,
+    .table-style2 th, .table-style2 td {
+      border: 1px solid gold;
+      padding: 10px;
+      text-align: center;
+      color: yellow;
+    }
+
+    .table-style1 th {
+      background-color: red;
+      color: white;
+    }
+
+    .table-style2 th {
+      background-color: black;
+      color: gold;
+    }
+
+    /* Hover glow on tables */
+    .table-style1 tr:hover, .table-style2 tr:hover {
+      background-color: rgba(255, 215, 0, 0.3);
+      transition: background-color 0.3s ease;
+    }
+
+    .about {
+      width: 60%;
+      margin: 20px auto;
+      text-align: left;
+      background: rgba(0,0,0,0.5);
+      padding: 12px;
+      border-radius: 8px;
+    }
+
+    .mycontainer {
+      width: 66%;
+      overflow: auto;
+      margin: 0 auto;
+    }
+
+    .mycontainer div {
+      width: 50%;
+      float: left;
+    }
+
+    .video {
+      width: 40%;
+      margin: 10px auto;
+      text-align: center;
+      border: 3px solid green;
+      background: rgba(0,0,0,0.5);
+      padding: 12px;
+      border-radius: 8px;
+    }
+
+    .list-style1, .list-style2 {
+      color: gold;
+      text-align: left;
+      margin: 20px;
+    }
+
+    .list-style1 { list-style-type: square; }
+    .list-style2 { list-style-type: circle; }
+
+    .button-transition {
+      background-color: navy;
+      color: white;
+      padding: 10px 20px;
+      transition: all 0.3s ease;
+      border: none;
+      cursor: pointer;
+    }
+
+    /* Animated button */
+    .button-transition:hover {
+      background-color: gold;
+      color: black;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
-<header>
-  <h1>Welcome To Chiefs Kingdom</h1>
-  <p>Want some updated stats?</p>
-<pre>
+  <header>
+    <h1>Welcome To Chiefs Kingdom</h1>
+    <p>Want some updated stats?</p>
+    <pre>
 Name: Trey Albertson
 Age: 30
 Location: Kansas City Mo
-</pre>
-<a href="test.html" style="color:black"; target="_blank";>
-<button>New Page Link</button></a>
-</header>
-<section class="about">
-<p>Check Out my Favorite website:
-<a href="https://www.chiefs.com/thekingdom/"target="_blank">The Kingdom</a>
-</p>
-<a href="mailto:t.albertson0695@gmail.com"target="_blank">Contact Me</a>
-<a href="https://github.com/settings/profile"target="_blank">
-<img src="https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/IMG_0455.JPG?raw=true" alt="Profile Photo" title= "Github Profile"></a>
-</section>
-<hr>
-<h2>QB Stats</h2>
-<table class="table-style1">
-<tr>
-<th>Current Quarterback</th>
-<th>Season	YDS	CMP%	TD	INT	QBR>
-</tr>
-<tr>
-<td>Patrick Mahomes</td>
-<td>2025,	2625,	64.5,	18,	6,	103.0S>
-</tr>
-<tr>
-<td>Patrick Mahomes</td>
-<td>2024,	3928,	67.5,	26,	11,	99.8</td>
-</tr>
-</table>
-<h2>Wide Recievers Stats</h2>
-<table class="table-style2">
-<tr>
-<th>Wide Reciever</th>
-<th>GP,	CAR,	YDS,	AVG,	LNG,	BIG,	TD,	YDS/G,	FUM,	LST,	FD</th>
-</tr>
-<tr>
-<td>Kareem Hunt</td>
-<td>10,	86,	353,	4.1,	33,	1,	6,	35.3,	1,	0,	29</td>
-</tr>
-<tr>
-<td>Isiah Pacheco</td>
-<td>8,	78,	329,	4.2,	16,	0,	1,	41.1,	0,	0,	21</td>
-</tr>
-</table>
-<div class= "mycontainer">
-<div>
-<h2>My Favorite Food</h2>
-<ul class="list-style1">
-<li>Porterhouse Steak</li>
-<li>Pizza</li>
-<li>Loaded Baked Potato</li>
-</ul>
-</div>
-<div>
-<h2>My Favorite Drinks</h2>
-<ul class="list-style2">
-<li>Monster Energy Drink</li>
-<li>Dr. Pepper</li>
-<li>Liquid I.V.</li>
-</ul>
-</div>
-</div>
-<hr>
-<section class="video">
-<h2>Travis Kelce WARMING UP!!!</h2>
-<video width="360"Height="480" controls>
-<source src=https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/Download.mp4?raw=true">
-Your Browser Does Not Support The Vide Tag.
-</video>
-</section>
-<h2>THE GOAT</h2>
-<iframe src="https://www.youtube.com/embed/36SPZdmAgTo" width="853" height="480" style="border:none;"></iframe>
-</section>
+    </pre>
+    <a href="test.html" style="color:black" target="_blank">
+      <button class="button-transition">New Page Link</button>
+    </a>
+  </header>
+
+  <section class="about">
+    <p>Check Out my Favorite website:
+      <a href="https://www.chiefs.com/thekingdom/" target="_blank">The Kingdom</a>
+    </p>
+    <a href="mailto:t.albertson0695@gmail.com" target="_blank">Contact Me</a>
+    <a href="https://github.com/settings/profile" target="_blank">
+      <img src="https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/IMG_0455.JPG?raw=true" alt="Profile Photo" title="Github Profile">
+    </a>
+  </section>
+
+  <hr>
+  <h2>QB Stats</h2>
+  <table class="table-style1">
+    <tr>
+      <th>Current Quarterback</th>
+      <th>Season YDS CMP% TD INT QBR</th>
+    </tr>
+    <tr>
+      <td>Patrick Mahomes</td>
+      <td>2025, 2625, 64.5, 18, 6, 103.0</td>
+    </tr>
+    <tr>
+      <td>Patrick Mahomes</td>
+      <td>2024, 3928, 67.5, 26, 11, 99.8</td>
+    </tr>
+  </table>
+
+  <h2>Wide Receivers Stats</h2>
+  <table class="table-style2">
+    <tr>
+      <th>Wide Receiver</th>
+      <th>GP, CAR, YDS, AVG, LNG, BIG, TD, YDS/G, FUM, LST, FD</th>
+    </tr>
+    <tr>
+      <td>Kareem Hunt</td>
+      <td>10, 86, 353, 4.1, 33, 1, 6, 35.3, 1, 0, 29</td>
+    </tr>
+    <tr>
+      <td>Isiah Pacheco</td>
+      <td>8, 78, 329, 4.2, 16, 0, 1, 41.1, 0, 0, 21</td>
+    </tr>
+  </table>
+
+  <div class="mycontainer">
+    <div>
+      <h2>My Favorite Food</h2>
+      <ul class="list-style1">
+        <li>Porterhouse Steak</li>
+        <li>Pizza</li>
+        <li>Loaded Baked Potato</li>
+      </ul>
+    </div>
+    <div>
+      <h2>My Favorite Drinks</h2>
+      <ul class="list-style2">
+        <li>Monster Energy Drink</li>
+        <li>Dr. Pepper</li>
+        <li>Liquid I.V.</li>
+      </ul>
+    </div>
+  </div>
+
+  <hr>
+  <section class="video">
+    <h2>Travis Kelce WARMING UP!!!</h2>
+    <video width="360" height="480" controls>
+      <source src="https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/Download.mp4?raw=true" type="video/mp4">
+      Your Browser Does Not Support The Video Tag.
+    </video>
+  </section>
+
+  <h2>THE GOAT</h2>
+  <iframe src="https://www.youtube.com/embed/36SPZdmAgTo" width="853" height="480" style="border:none;"></iframe>
 </body>
 </html>
