--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ Location: Kansas City Mo
 
   <div class="mycontainer">
     <div>
-      <h2>My Favorite Food</h2>
+      <h2> Current Ticket Prices</h2>
       <ul class="list-style1">
-        <li>Porterhouse Steak</li>
+        <li>General Admissions Single Game $150-$200</li>
         <li>Pizza</li>
         <li>Loaded Baked Potato</li>
       </ul>
