--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@ Location: Kansas City Mo
       <h2> Current Ticket Prices</h2>
       <ul class="list-style1">
         <li>General Admissions Single Game $150-$200</li>
-        <li>Pizza</li>
-        <li>Loaded Baked Potato</li>
+        <li>Premium Seating Single Game $450-$700</li>
+        <li>Season Tickets Approx. $4K</li>
       </ul>
     </div>
     <div>
