--- a/index.html
+++ b/index.html
@@ -256,17 +256,17 @@ Location: Kansas City, MO
       <div>
         <h2>Current Ticket Prices</h2>
         <ul class="list-style1">
-          <li>General Admissions Single Game $150-$200</li>
-          <li>Premium Seating Single Game $450-$700</li>
-          <li>Season Tickets Approx. $4K</li>
+          <li>General Admissions Single Game: $150-$200</li>
+          <li>Premium Seating Single Game: $450-$700</li>
+          <li>Season Tickets Approx.: $4K</li>
         </ul>
       </div>
       <div>
-        <h2>My Favorite Drinks</h2>
+        <h2>Stadium Food and Drinks</h2>
         <ul class="list-style2">
-          <li>Monster Energy Drink</li>
-          <li>Dr. Pepper</li>
-          <li>Liquid I.V.</li>
+          <li>Beer: $6.80-$9.20</li>
+          <li>Hot-Dog: $8.05</li>
+          <li>Combo: $15.02</li>
         </ul>
       </div>
     </div>
