--- a/index.html
+++ b/index.html
@@ -34,18 +34,14 @@
       inset: 0;
       background: rgba(0,0,0,0.4);
     }
-    header * {
-      position: relative;
-    }
+    header * { position: relative; }
 
     h1, h2 {
       color: gold;
       text-shadow: 2px 2px 6px black;
     }
 
-    p {
-      font-size: 18px;
-    }
+    p { font-size: 18px; }
 
     img {
       max-width: 100%;
@@ -70,15 +66,8 @@
       color: yellow;
     }
 
-    .table-style1 th {
-      background-color: red;
-      color: white;
-    }
-
-    .table-style2 th {
-      background-color: black;
-      color: gold;
-    }
+    .table-style1 th { background-color: red; color: white; }
+    .table-style2 th { background-color: black; color: gold; }
 
     table tr:hover {
       background-color: rgba(255, 215, 0, 0.3);
@@ -102,10 +91,7 @@
       margin: 0 auto;
     }
 
-    .mycontainer div {
-      flex: 1;
-      margin: 10px;
-    }
+    .mycontainer div { flex: 1; margin: 10px; }
 
     .video {
       width: 80%;
@@ -143,6 +129,21 @@
       color: black;
       transform: scale(1.05);
     }
+
+    #playButton {
+      background-color: #E31837; /* Chiefs red */
+      color: #FFB612;           /* Chiefs gold */
+      font-weight: bold;
+      border: none;
+      padding: 12px 24px;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: background-color 0.3s;
+      margin-top: 20px;
+    }
+
+    #playButton:hover { background-color: #B11226; }
   </style>
 </head>
 <body>
@@ -175,31 +176,13 @@ Location: Kansas City, MO
       <h2>QB Stats</h2>
       <table class="table-style1">
         <tr>
-          <th>Quarterback</th>
-          <th>Season</th>
-          <th>YDS</th>
-          <th>CMP%</th>
-          <th>TD</th>
-          <th>INT</th>
-          <th>QBR</th>
+          <th>Quarterback</th><th>Season</th><th>YDS</th><th>CMP%</th><th>TD</th><th>INT</th><th>QBR</th>
         </tr>
         <tr>
-          <td>Patrick Mahomes</td>
-          <td>2025</td>
-          <td>2625</td>
-          <td>64.5%</td>
-          <td>18</td>
-          <td>6</td>
-          <td>103.0</td>
+          <td>Patrick Mahomes</td><td>2025</td><td>2625</td><td>64.5%</td><td>18</td><td>6</td><td>103.0</td>
         </tr>
         <tr>
-          <td>Patrick Mahomes</td>
-          <td>2024</td>
-          <td>3928</td>
-          <td>67.5%</td>
-          <td>26</td>
-          <td>11</td>
-          <td>99.8</td>
+          <td>Patrick Mahomes</td><td>2024</td><td>3928</td><td>67.5%</td><td>26</td><td>11</td><td>99.8</td>
         </tr>
       </table>
     </section>
@@ -208,46 +191,16 @@ Location: Kansas City, MO
       <h2>Offensive Player Stats</h2>
       <table class="table-style2">
         <tr>
-          <th>Player</th>
-          <th>GP</th>
-          <th>CAR</th>
-          <th>YDS</th>
-          <th>AVG</th>
-          <th>LNG</th>
-          <th>BIG</th>
-          <th>TD</th>
-          <th>YDS/G</th>
-          <th>FUM</th>
-          <th>LST</th>
-          <th>FD</th>
+          <th>Player</th><th>GP</th><th>CAR</th><th>YDS</th><th>AVG</th><th>LNG</th><th>BIG</th>
+          <th>TD</th><th>YDS/G</th><th>FUM</th><th>LST</th><th>FD</th>
         </tr>
         <tr>
-          <td>Kareem Hunt</td>
-          <td>10</td>
-          <td>86</td>
-          <td>353</td>
-          <td>4.1</td>
-          <td>33</td>
-          <td>1</td>
-          <td>6</td>
-          <td>35.3</td>
-          <td>1</td>
-          <td>0</td>
-          <td>29</td>
+          <td>Kareem Hunt</td><td>10</td><td>86</td><td>353</td><td>4.1</td><td>33</td><td>1</td>
+          <td>6</td><td>35.3</td><td>1</td><td>0</td><td>29</td>
         </tr>
         <tr>
-          <td>Isiah Pacheco</td>
-          <td>8</td>
-          <td>78</td>
-          <td>329</td>
-          <td>4.2</td>
-          <td>16</td>
-          <td>0</td>
-          <td>1</td>
-          <td>41.1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>21</td>
+          <td>Isiah Pacheco</td><td>8</td><td>78</td><td>329</td><td>4.2</td><td>16</td><td>0</td>
+          <td>1</td><td>41.1</td><td>0</td><td>0</td><td>21</td>
         </tr>
       </table>
     </section>
@@ -256,22 +209,29 @@ Location: Kansas City, MO
       <div>
         <h2>Current Ticket Prices</h2>
         <ul class="list-style1">
-          <li>General Admissions Single Game: $150-$200</li>
-          <li>Premium Seating Single Game: $450-$700</li>
-          <li>Season Tickets Approx.: $4K</li>
+          <li><strong>General Admission (Single Game):</strong> $150 – $200</li>
+          <li><strong>Premium Seating (Single Game):</strong> $450 – $700</li>
+          <li><strong>Season Tickets:</strong> Approx. $4,000</li>
         </ul>
       </div>
       <div>
-        <h2>Stadium Food and Drinks</h2>
+        <h2>Stadium Food & Drinks</h2>
         <ul class="list-style2">
-          <li>Beer: $6.80-$9.20</li>
-          <li>Hot-Dog: $8.05</li>
-          <li>Combo: $15.02</li>
+          <li><strong>Beer:</strong> $6.80 – $9.20</li>
+          <li><strong>Hot Dog:</strong> $8.05</li>
+          <li><strong>Combo Meal:</strong> $15.02</li>
         </ul>
       </div>
-    </div>
-
-    <hr>
+      <div>
+        <h2>Top Stores</h2>
+        <ul class="list-style2">
+          <li><strong>The Pro Shop</strong></li>
+          <li><strong>1KC</strong></li>
+          <li><strong>Made In KC</strong></li>
+        </ul>
+      </div>
+      <div>
+<hr>
     <section class="video">
       <h2>Travis Kelce WARMING UP!!!</h2>
       <video width="360" height="480" controls>
@@ -282,4 +242,5 @@ Location: Kansas City, MO
 
     <section>
       <h2>THE GOAT</h2>
-      <iframe src="https://www.youtube.com/embed/36SPZdmAgTo" width="853" height="480" style="border:none;" title="YouTube video"></iframe
+      <iframe src="https://www.youtube.com/embed/36SPZdmAgTo" width="853" height="480" style="border:none;" title="YouTube video"></iframe>
+	</section>
