--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Location: Kansas City, MO
 
     <section class="video">
       <h2>THE GOAT</h2>
-      <iframe src="https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/videoplayback.mp4" width="853" height="480" style="border:none;" title="YouTube video" allowfullscreen></iframe>
+      <iframe src="https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/videoplayback.mp4?raw=true" width="853" height="480" style="border:none;" title="YouTube video" allowfullscreen></iframe>
     </section>
 
     <hr>
