--- a/index.html
+++ b/index.html
@@ -262,13 +262,14 @@ Location: Kansas City, MO
         Your browser does not support the video tag.
       </video>
     </section>
-
-    <section class="video">
-      <h2>THE GOAT</h2>
-      <iframe src="https://github.com/talbertson0695/Chiefs-Kingdom/blob/main/videoplayback.mp4?raw=true" width="853" height="480" style="border:none;" title="YouTube video" allowfullscreen></iframe>
-    </section>
-
-    <hr>
+ <section class="video">
+  <h2>THE GOAT</h2>
+  <video controls width="853" height="480">
+    <source src="https://talbertson0695.github.io/Chiefs-Kingdom/videoplayback.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</section>
+ <hr>
     <section>
       <h2>Red Kingdom Anthem</h2>
       <audio id="redKingdom" preload="auto">
